#61: Setup API Gateway: revert build step: change view, fix sonar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html> <!-- Important: must specify -->
-<html>
+<html lang="en">
 <head>
     <title>PDA API Docs</title>
     <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
@@ -24,7 +24,7 @@
         render-style="view"
         spec-url="api-docs.json"
 >
-    <img slot="logo"
+    <img alt="PDA Logo" slot="logo"
          src="logo.svg"
          style="width: 40px"
     />
