adapt as documentation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         persist-auth="true"
         persist-auth="true"
         primary-color="#0b9a78"
-        render-style="view"
+        allow-authentication="false"
         spec-url="api-docs.json"
+        allow-server-selection="false"
+        allow-try="false"
+        render-style="focused"
 >
     <img alt="PDA Logo" slot="logo"
          src="logo.svg"
