adapt as documentation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         allow-server-selection="false"
         allow-try="false"
         render-style="focused"
+        sort-tags="true"
 >
     <img alt="PDA Logo" slot="logo"
          src="logo.svg"
