switch to light theme

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         heading-text="PDA"
         persist-auth="true"
         persist-auth="true"
+        theme="light"
         primary-color="#0b9a78"
         allow-authentication="false"
         spec-url="api-docs.json"
