--- a/pda-api-gateway/src/main/resources/static/index.html
+++ b/pda-api-gateway/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <meta content="#da532c" name="msapplication-TileColor">
     <meta content="#ffffff" name="theme-color">
     <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
-    <script src="https://unpkg.com/rapidoc/dist/rapidoc-min.js" type="module"></script>
+    <script src="/rapidoc-min.js" type="module"></script>
 </head>
 <body>
 <rapi-doc
@@ -18,7 +18,6 @@
         allow-spec-url-load="false"
         header-color="#e3e4e5"
         heading-text="PDA"
-        logo="/logo.svg"
         persist-auth="true"
         persist-auth="true"
         primary-color="#0b9a78"
