#61: gh-pages move to read mode

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         spec-url="api-docs.json"
         allow-server-selection="false"
         allow-try="false"
-        render-style="focused"
+        render-style="read"
         sort-tags="true"
 >
     <img alt="PDA Logo" slot="logo"
