--- a/pda-api-gateway/src/main/resources/static/index.html
+++ b/pda-api-gateway/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- Important: must specify -->
 <html>
 <head>
-    <title>PDA API Docs</title>
+    <title>PDA API Playground</title>
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
     <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
