--- a/pda-api-gateway/src/main/resources/static/index.html
+++ b/pda-api-gateway/src/main/resources/static/index.html
@@ -25,16 +25,26 @@
           render-style="view"
           spec-url="/v3/api-docs"
 >
-    <img slot="logo"
+    <img alt="PDA logo" class="pda" slot="logo"
          src="/logo.svg"
-         style="width: 40px"
+         style="width: 40px; display: none"
     />
+    <div class="pda" slot="auth" style="display: none">
+        You are initially preauthorized with <code>special_key</code> which give access to all resources.
+    </div>
 </rapi-doc>
 <script>
     window.addEventListener('DOMContentLoaded', (event) => {
         const rapidocEl = document.getElementById('the-doc');
         rapidocEl.addEventListener('spec-loaded', (e) => {
             rapidocEl.setApiKey("jwt", "special_key")
+        })
+
+        rapidocEl.addEventListener('before-render', () => {
+            let elements = document.getElementsByClassName('pda');
+            for (let i = 0; i < elements.length; i++) {
+                elements.item(i).style.display = 'block';
+            }
         })
     });
 </script>
