--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
         render-style="read"
         sort-tags="true"
 >
-    <img alt="PDA Logo" slot="logo"
+    <img alt="PDA Logo" class="pda" slot="logo"
          src="logo.svg"
          style="width: 40px"
     />
+    <script>
+        window.addEventListener('DOMContentLoaded', (event) => {
+            rapidocEl.addEventListener('before-render', () => {
+                let elements = document.getElementsByClassName('pda');
+                for (let i = 0; i < elements.length; i++) {
+                    elements.item(i).style.display = 'block';
+                }
+            })
+        });
+    </script>
 </rapi-doc>
 </body>
 </html>
