--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         sort-tags="true"
 >
     <img alt="PDA Logo" class="pda" slot="logo"
+         style="display: hidden;"
          src="logo.svg"
          style="width: 40px"
     />
