--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         sort-tags="true"
 >
     <img alt="PDA Logo" class="pda" slot="logo"
-         style="display: hidden;"
          src="logo.svg"
-         style="width: 40px"
+         style="display: none; width: 40px"
     />
     <script>
         window.addEventListener('DOMContentLoaded', (event) => {
