--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="rapidoc-min.js" type="module"></script>
 </head>
 <body>
-<rapi-doc
+<rapi-doc id="doc"
         allow-spec-file-load="false"
         allow-spec-url-load="false"
         header-color="#e3e4e5"
@@ -35,6 +35,7 @@
     />
     <script>
         window.addEventListener('DOMContentLoaded', (event) => {
+            const rapidocEl = document.getElementById("doc");
             rapidocEl.addEventListener('before-render', () => {
                 let elements = document.getElementsByClassName('pda');
                 for (let i = 0; i < elements.length; i++) {
