--- a/pda-api-gateway/src/main/resources/static/index.html
+++ b/pda-api-gateway/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- Important: must specify -->
 <html>
 <head>
-    <title>PDA API Docs</title>
+    <title>PDA API Playground</title>
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
     <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
@@ -11,23 +11,42 @@
     <meta content="#ffffff" name="theme-color">
     <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
     <script src="/rapidoc-min.js" type="module"></script>
+
 </head>
 <body>
-<rapi-doc
-        allow-spec-file-load="false"
-        allow-spec-url-load="false"
-        header-color="#e3e4e5"
-        heading-text="PDA"
-        persist-auth="true"
-        persist-auth="true"
-        primary-color="#0b9a78"
-        render-style="view"
-        spec-url="/v3/api-docs"
+<rapi-doc id="the-doc"
+          allow-spec-file-load="false"
+          allow-spec-url-load="false"
+          header-color="#e3e4e5"
+          heading-text="PDA"
+          persist-auth="true"
+          persist-auth="true"
+          primary-color="#0b9a78"
+          render-style="view"
+          spec-url="/v3/api-docs"
 >
-    <img slot="logo"
+    <img alt="PDA logo" class="pda" slot="logo"
          src="/logo.svg"
-         style="width: 40px"
+         style="width: 40px; display: none"
     />
+    <div class="pda" slot="auth" style="display: none">
+        You are initially preauthorized with <code>special_key</code> which give access to all resources.
+    </div>
 </rapi-doc>
+<script>
+    window.addEventListener('DOMContentLoaded', (event) => {
+        const rapidocEl = document.getElementById('the-doc');
+        rapidocEl.addEventListener('spec-loaded', (e) => {
+            rapidocEl.setApiKey("jwt", "special_key")
+        })
+
+        rapidocEl.addEventListener('before-render', () => {
+            let elements = document.getElementsByClassName('pda');
+            for (let i = 0; i < elements.length; i++) {
+                elements.item(i).style.display = 'block';
+            }
+        })
+    });
+</script>
 </body>
 </html>
