--- a/pda-api-gateway/src/main/resources/static/index.html
+++ b/pda-api-gateway/src/main/resources/static/index.html
@@ -24,6 +24,7 @@
           primary-color="#0b9a78"
           render-style="view"
           spec-url="/v3/api-docs"
+          show-curl-before-try="true"
 >
     <img alt="PDA logo" class="pda" slot="logo"
          src="/logo.svg"
